force-app/main/default/objects/Event_Registrant__c/Event_Registrant__c.object-meta.xml
<CustomObject>
    <description>Volunteer associated with an event.</description>
    <label>Event Registrant</label>
    <nameField>
        <displayFormat>ER{00000000}</displayFormat>
        <label>Event Registrant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>