force-app/main/default/objects/Event_Registrant__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>