force-app/main/default/objects/Event_Registrant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City populated via integration from Cvent.</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>