force-app/main/default/objects/Event_Registrant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The master-detail lookup field to the Contact object.</description>
    <inlineHelpText>Use this field to the select the volunteer associated to the event.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Registrants</relationshipLabel>
    <relationshipName>Event_Volunteer</relationshipName>
    <type>Lookup</type>
</CustomField>