force-app/main/default/objects/Event_Registrant__c/fields/Cvent_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Contact_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Cvent Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>