force-app/main/default/objects/Event_Registrant__c/fields/Cvent_Guest_ID__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Guest_ID__c</fullName>
    <description>Field populated via Cvent integration.  This field is used for counting the invitees across the various event categories.</description>
    <inlineHelpText>Field populated via Cvent integration.  This field is used for counting the invitees across the various event categories.</inlineHelpText>
    <label>Cvent Guest ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>