force-app/main/default/objects/Event_Registrant__c/fields/Cvent_Registrant_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Registrant_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cvent Registrant Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>