force-app/main/default/objects/Event_Registrant__c/fields/Cvent_Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Registration_Email__c</fullName>
    <label>Cvent Registration Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>