force-app/main/default/objects/Event_Registrant__c/fields/Enterprise_Program__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Program__c</fullName>
    <formula>Volunteer_Event__r.Program__r.Branding_Descriptor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Program</label>
    <type>Text</type>
</CustomField>