force-app/main/default/objects/Event_Registrant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name populated via integration from Cvent.</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>