force-app/main/default/objects/Event_Registrant__c/fields/Interested_in_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Volunteering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Volunteering</label>
    <type>Checkbox</type>
</CustomField>