force-app/main/default/objects/Event_Registrant__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name populated via integration from Cvent.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>