force-app/main/default/objects/Event_Registrant__c/fields/Matching_Volunteer_Email_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Matching_Volunteer_Email_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matching Volunteer Email Not Found</label>
    <type>Checkbox</type>
</CustomField>