force-app/main/default/objects/Event_Registrant__c/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <label>Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>