force-app/main/default/objects/Event_Registrant__c/fields/Participated__c.field-meta.xml
<CustomField>
    <fullName>Participated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participated</label>
    <type>Checkbox</type>
</CustomField>