force-app/main/default/objects/Event_Registrant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number populated via integration from Cvent.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>