force-app/main/default/objects/Event_Registrant__c/fields/Program_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Volunteer</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>Event Registrants</relationshipLabel>
    <relationshipName>Event_Registrants</relationshipName>
    <type>Lookup</type>
</CustomField>