force-app/main/default/objects/Event_Registrant__c/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Prospect Batch Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>