force-app/main/default/objects/Event_Registrant__c/fields/Registrant_Status__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Status__c</fullName>
    <label>Registrant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Visited</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>