force-app/main/default/objects/Event_Registrant__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Registration date populated via integration from Cvent.</description>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>