force-app/main/default/objects/Event_Registrant__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <description>What is the volunteer&#39;s role in the event?</description>
    <inlineHelpText>What is the volunteer&#39;s role in the event?</inlineHelpText>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Worker</fullName>
            </value>
            <value>
                <fullName>Volunteer Attendee</fullName>
            </value>
            <value>
                <fullName>AARP Board of Directors</fullName>
            </value>
            <value>
                <fullName>AARP Executive Team</fullName>
            </value>
            <value>
                <fullName>AARP Foundation Staff</fullName>
            </value>
            <value>
                <fullName>AARP Member</fullName>
            </value>
            <value>
                <fullName>AARP Member - Consumer Cellular Contact Center</fullName>
            </value>
            <value>
                <fullName>AARP Member or Consumer</fullName>
            </value>
            <value>
                <fullName>AARP National Office Staff</fullName>
            </value>
            <value>
                <fullName>AARP Staff</fullName>
            </value>
            <value>
                <fullName>AARP Staff - Call Center</fullName>
            </value>
            <value>
                <fullName>AARP State Office</fullName>
            </value>
            <value>
                <fullName>AARP Volunteer</fullName>
            </value>
            <value>
                <fullName>AARP Volunteer - Call Center</fullName>
            </value>
            <value>
                <fullName>Additional Vietnam Vet Guest (Not Free) - Call Cen</fullName>
            </value>
            <value>
                <fullName>Additional Vietnam Veteran Guests (Not Free)</fullName>
            </value>
            <value>
                <fullName>Additional Volunteer</fullName>
            </value>
            <value>
                <fullName>Campaign Aging 1 Day</fullName>
            </value>
            <value>
                <fullName>Campaign Aging 2 Days</fullName>
            </value>
            <value>
                <fullName>Campaign for Action - Fee</fullName>
            </value>
            <value>
                <fullName>Capitol Hill Staff Volunteers</fullName>
            </value>
            <value>
                <fullName>CEJC Member</fullName>
            </value>
            <value>
                <fullName>CEJC Non Member</fullName>
            </value>
            <value>
                <fullName>Community Partner</fullName>
            </value>
            <value>
                <fullName>CSN Leadership - Volunteer</fullName>
            </value>
            <value>
                <fullName>CSN Leadership Summit - State Director/Manager</fullName>
            </value>
            <value>
                <fullName>CSN Leadership Team</fullName>
            </value>
            <value>
                <fullName>DC-MD-VA State Office Staff</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Experience Corps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>