force-app/main/default/objects/Event_Registrant__c/fields/Volunteer_Event__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event__c</fullName>
    <description>The master-detail lookup field to the Volunteer Event object.</description>
    <inlineHelpText>Use this field to the select the program event associated to the volunteer.</inlineHelpText>
    <label>Volunteer Event</label>
    <referenceTo>Volunteer_Event__c</referenceTo>
    <relationshipLabel>Event Registrants</relationshipLabel>
    <relationshipName>Event_Registrant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>