force-app/main/default/objects/Event_Registrant__c/fields/Volunteer_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event_Status__c</fullName>
    <description>Status of related volunteer event.</description>
    <formula>TEXT( Volunteer_Event__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of related volunteer event.</inlineHelpText>
    <label>Volunteer Event Status</label>
    <type>Text</type>
</CustomField>